# CMake 最低版本号要求
cmake_minimum_required (VERSION 2.8)

# 项目信息
project (mf_driver CXX)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/mf_driver/lib)

INCLUDE_DIRECTORIES(system ${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(system ../External/)

# 查找当前目录下的所有源文件
# 并将名称保存到 ALL_SRC_FILE 变量
file(GLOB_RECURSE ALL_SRC_FILE  ${PROJECT_SOURCE_DIR} "*.cc")
file(GLOB_RECURSE ALL_SRC_FILE2  ${PROJECT_SOURCE_DIR} "*.cpp")

# 指定生成目标
ADD_LIBRARY(mf_driver STATIC ${ALL_SRC_FILE} ${ALL_SRC_FILE2} )
#cotire(base)

# 设置链接库
target_link_libraries(mf_driver svr_util libevent_cpp mf_proto libevent.a)